--- a/package.json
+++ b/package.json
@@ -29,28 +29,29 @@
 	"author": "Samuel Charpentier",
 	"license": "MIT",
 	"dependencies": {
-		"fs-extra": "^9.0.1",
+		"fs-extra": "^10.0.0",
 		"sudo-prompt": "^9.2.1",
-		"yargs": "^15.4.0"
+		"yargs": "^17.0.1"
 	},
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "^19.0.0",
-		"@types/fs-extra": "^9.0.1",
-		"@types/node": "^14.0.14",
-		"@typescript-eslint/eslint-plugin": "^4.28.0",
-		"@typescript-eslint/parser": "^4.28.0",
-		"builtin-modules": "^3.1.0",
+		"@types/fs-extra": "^9.0.11",
+		"@types/node": "^15.14.0",
+		"@typescript-eslint/eslint-plugin": "^4.28.1",
+		"@typescript-eslint/parser": "^4.28.1",
+		"builtin-modules": "^3.2.0",
 		"eslint": "^7.29.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^3.4.0",
 		"eslint-plugin-react": "^7.24.0",
-		"prettier": "^2.0.5",
-		"rollup": "^2.19.0",
+		"locale-enum": "^1.1.1",
+		"prettier": "^2.3.2",
+		"rollup": "^2.52.7",
 		"rollup-plugin-node-externals": "^2.2.0",
 		"rollup-plugin-node-resolve": "^5.2.0",
-		"rollup-plugin-typescript2": "^0.27.1",
-		"tape": "^5.0.1",
-		"typescript": "^3.9.6",
+		"rollup-plugin-typescript2": "^0.30.0",
+		"tape": "^5.2.2",
+		"typescript": "^4.3.5",
 		"xml-js": "^1.6.11"
 	},
 	"cep": {
