--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 	],
 	"scripts": {
 		"dev": "rollup --config --watch",
-		"build": "rollup --config"
+		"build": "rollup --config",
+		"test": "jest"
 	},
 	"keywords": [
 		"Adobe",
@@ -37,6 +38,7 @@
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "^19.0.0",
 		"@types/fs-extra": "^9.0.11",
+		"@types/jest": "^27.0.2",
 		"@types/node": "^15.14.0",
 		"@typescript-eslint/eslint-plugin": "^4.28.1",
 		"@typescript-eslint/parser": "^4.28.1",
@@ -45,12 +47,39 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^3.4.0",
 		"eslint-plugin-react": "^7.24.0",
+		"jest": "^27.3.1",
 		"locale-enum": "^1.1.1",
 		"rollup": "^2.52.7",
 		"rollup-plugin-node-externals": "^2.2.0",
 		"rollup-plugin-node-resolve": "^5.2.0",
 		"rollup-plugin-typescript2": "^0.30.0",
 		"tape": "^5.2.2",
+		"ts-jest": "^27.0.7",
 		"typescript": "^4.3.5"
+	},
+	"jest": {
+		"transform": {
+			"^.+\\.(t|j)sx?$": "ts-jest"
+		},
+		"testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+		"moduleFileExtensions": [
+			"ts",
+			"tsx",
+			"js",
+			"jsx",
+			"json",
+			"node"
+		],
+		"moduleNameMapper": {
+			"@src/(.*)": "<rootDir>/src/$1",
+			"@manifest/(.*)": "<rootDir>/src/lib/manifest/$1"
+		},
+		"globals": {
+			"ts-jest": {
+				"diagnostics": {
+					"warnOnly": true
+				}
+			}
+		}
 	}
 }
