--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
 		"**/.hg": true,
 		"**/CVS": true,
 		"**/.DS_Store": true,
+		"**/Thumbs.db": true,
 		".vscode": true,
 		"node_modules": true
 	},
