--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
 			"json",
 			"node"
 		],
+		"modulePathIgnorePatterns": [
+			".*\\.config\\.(jsx?|tsx?)$"
+		],
 		"moduleNameMapper": {
 			"@src/(.*)": "<rootDir>/src/$1",
 			"@manifest/(.*)": "<rootDir>/src/lib/manifest/$1"
