--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
 		"transform": {
 			"^.+\\.(t|j)sx?$": "ts-jest"
 		},
-		"testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+		"testRegex": "/__tests__/.*\\.test\\.ts?$",
 		"moduleFileExtensions": [
 			"ts",
 			"tsx",
@@ -75,7 +75,8 @@
 		],
 		"moduleNameMapper": {
 			"@src/(.*)": "<rootDir>/src/$1",
-			"@manifest/(.*)": "<rootDir>/src/lib/manifest/$1"
+			"@manifest/(.*)": "<rootDir>/src/lib/manifest/$1",
+			"@tests/(.*)": "<rootDir>/__tests__/$1"
 		},
 		"globals": {
 			"ts-jest": {
