--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,10 @@
 		"baseUrl": ".",
 		"paths": {
 			"@src/*": ["src/*"],
-			"@manifest/*": ["src/lib/manifest/*"]
+			"@manifest/*": ["src/lib/manifest/*"],
+			"@tests/*": ["__tests__/*"]
 		}
 	},
 	"include": ["src", "__tests__"],
-	"exclude": ["node_modules", "dist"]
+	"exclude": ["node_modules", "dist", "**.example.ts"]
 }
