--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
 		"**/.DS_Store": true,
 		"**/Thumbs.db": true,
 		".vscode": true,
-		"node_modules": true
+		"node_modules": true,
+		"coverage": true
 	},
 	"explorerExclude.backup": {}
 }
